# home-inventory

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION.md  FRONTEND_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LABEL_PDF_FLOW.md  MODAL_IMPLEMENTATION.md  Makefile  NEXT_STEPS.md  PHASE_2_WORKLIST.md  PHOTO_UPLOAD_SETUP.md  PHOTO_UPLOAD_TROUBLESHOOTING.md  QUICK_START.md  README.md  REFACTORING_NEXT_STEPS.md  ROOMS_CRUD.md  START.sh  START_MINIO.md  TESTING.md  TODO.md  WINDSURF_RULES.md  WINDSURF_SETUP.md  WINDSURF_WORKFLOWS.md  dev.sh  docker-compose.yml  package-lock.json  schema.sql
.github/workflows/: deploy-prod.yml  pr-validation.yml
backend/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  GOOGLE_AUTH_SETUP.md  build.rs
backend/migrations/: 20240101000000_enable_extensions.sql  20240101000001_create_users.sql  20240101000002_create_labels.sql  20240101000003_create_hierarchy.sql  20240101000004_create_tags.sql  20240101000005_create_photos.sql  20240101000006_create_audit.sql  20240101000007_create_product_cache.sql  20240101000008_create_indexes.sql  20240101000009_create_triggers.sql  20240101000010_create_views.sql  20240101000011_create_item_import_drafts.sql  20240101000012_create_item_import_drafts_triggers.sql  20240101000013_create_tower_sessions.sql  20240105000000_replace_cognito_with_google.sql  20241229000001_add_container_updates_to_drafts.sql  20260126000000_add_item_fields.sql  20260126000001_add_user_display_name.sql  20260126000002_create_contact_submissions.sql  20260130000000_add_shelf_and_hint_to_drafts.sql
backend/src/: app.rs  error.rs  main.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: audit.rs  contact.rs  container.rs  item.rs  item_import_draft.rs  label.rs  mod.rs  pagination.rs  photo.rs  room.rs  shelf.rs  shelving_unit.rs  tag.rs  user.rs
backend/src/routes/: audit.rs  auth.rs  contact.rs  containers.rs  item_import_drafts.rs  items.rs  labels.rs  mod.rs  move.rs  photos.rs  rooms.rs  shelves.rs  shelving_units.rs  tags.rs  users.rs
backend/src/services/: audit.rs  captcha.rs  mod.rs  move.rs  qr_pdf.rs  s3.rs  vision.rs
docs/: AUTHENTICATION.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_SETUP.md  MINIO_SETUP.md  README.md
frontend/: .env  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: ai.txt  robots.txt
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: audit.ts  client.ts  contact.ts  containers.ts  index.ts  itemImportDrafts.ts  items.ts  labels.ts  move.ts  photos.ts  rooms.ts  shelves.ts  shelvingUnits.ts  tags.ts  users.ts
frontend/src/components/: Breadcrumb.tsx  EntityCreateModal.tsx  EntityField.tsx  EntitySelector.tsx  FileUpload.tsx  ImportItemsFromPhoto.tsx  LoginButton.tsx  Modal.tsx  MoveModal.tsx  MultiImageAnalyzer.tsx  Pagination.tsx  PhotoGallery.tsx  PhotoUpload.tsx  ProtectedRoute.tsx  ReCaptchaWidget.tsx  TagSelector.tsx  Toast.css  Toast.tsx  UserSelector.tsx  index.ts
frontend/src/context/: ToastContext.tsx
frontend/src/hooks/: index.ts  useAudit.ts  useAuth.ts  useContainers.ts  useItemImportDrafts.ts  useItems.ts  useLabels.ts  useMove.ts  usePhotos.ts  useRooms.ts  useTags.ts  (+2 more)
infrastructure/: .eslintrc.json  .gitignore  KMS_SETUP.md  Pulumi.prod.yaml  Pulumi.yaml  README.md  TAGGING.md  index.ts  package-lock.json  package.json  pulumi-wrapper.sh  tsconfig.json
infrastructure/scripts/: add-no-transaction-directive.sh  apply-dsql-migrations.sh  apply-migrations-to-dsql-west.sh  apply-migrations-to-dsql.sh  build-lambda.sh  deploy-frontend.sh  fix-migrations-for-dsql.sh  setup.sh
infrastructure/src/: cloudfront.ts  database.ts  iam.ts  lambda.ts  monitoring.ts  storage.ts  types.ts
scripts/: make-worktree.sh  rm-worktree.sh
(+32 files in other folders)
