[package]
name = "home-inventory-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
lambda_http = "0.13"
lambda_runtime = "0.13"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-sessions = "0.13"


# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Type generation for frontend
typeshare = "1"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"
cargo-watch = "8.5.3"

# QR code generation
qrcode = "0.14"
image = "0.25"

# PDF generation - using printpdf for now, may switch to simpler library
printpdf = "0.7"

# S3 storage (works with MinIO)
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sigv4 = "1"

# Auth
oauth2 = "4.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = "0.3"



[build-dependencies]
typeshare = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
